@@ -17,15 +17,15 @@ def glob_files(pattern):
 
 # Files to install:
 data_files = [
-    #('usr/share/ardj/database', glob_files('share/database/*.sql')),
-    ('usr/share/ardj/failure', ['share/audio/stefano_mocini_leaving_you_failure_edit.ogg']),
-    ('usr/share/ardj/samples', ['share/audio/cubic_undead.mp3', 'share/audio/successful_install.ogg']),
-    ('usr/share/ardj/shell-extensions/zsh', ['share/shell-extensions/zsh/_ardj']),
-    ('usr/share/doc/ardj', ('NEWS', 'README.txt', 'TODO')),
-    ('usr/share/doc/ardj/examples', glob_files('share/doc/examples/*')),
-    ('usr/share/doc/ardj/html/', glob_files('share/doc/html/*')),
-    ('usr/share/man/man1', ['share/doc/man/ardj.1']),
-    ('usr/lib/ardj', ['bin/ardj-next-track', 'bin/ezstream-meta']),
+    #('share/ardj/database', glob_files('share/database/*.sql')),
+    ('share/ardj/failure', ['share/audio/stefano_mocini_leaving_you_failure_edit.ogg']),
+    ('share/ardj/samples', ['share/audio/cubic_undead.mp3', 'share/audio/successful_install.ogg']),
+    ('share/ardj/shell-extensions/zsh', ['share/shell-extensions/zsh/_ardj']),
+    ('share/doc/ardj', ('NEWS', 'README.txt', 'TODO')),
+    ('share/doc/ardj/examples', glob_files('share/doc/examples/*')),
+    ('share/doc/ardj/html/', glob_files('share/doc/html/*')),
+    ('share/man/man1', ['share/doc/man/ardj.1']),
+    ('lib/ardj', ['bin/ardj-next-track', 'bin/ezstream-meta']),
 ]
 
 classifiers = [
