@@ -1,4 +1,4 @@
-2014/06/09 (1.2.4)
+2014/06/09 (1.2.5)
 - Using VirtualEnv for local development and testing.
 - No longer installing system-wide config files (in /etc).
 - Fixed broken dependencies.
@@ -7,6 +7,7 @@
 - Subprocess monitor names log files on child errors.
 - Initialize database when running the server.
 - Added missing scripts to setup.py.
+- Fixed install paths in setup.py.
 
 2013/09/30 (1.2.2)
 - Fix permissions on config files during component startup.
